--- a/gb/20/1/13/n11790627.md
+++ b/gb/20/1/13/n11790627.md
@@ -1,53 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/qgedzr297/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qgedzr297/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xcbfpq327/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>黑鹰殉职将士移柩 沿途民众致敬 蔡英文亲悼</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/20200113PHO0120l-600x400.jpg" />
-<h6>总统蔡英文（前左2）13日在国防部长严德发（前左3）、国安会秘书长李大维（前左）陪同下，于国防部外带领官兵同仁向黑鹰殉职将士告别，场面肃穆。（中央社）
-</h6>
+<a href="https://git.io/JTxVg"><img width="600" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-<p>【大纪元2020年01月13日讯】<a href="https://github.com/qgedzr297/djy/blob/master/gb/tag/%E5%8F%82%E8%B0%8B%E6%80%BB%E9%95%BF.md">参谋总长</a><a href="https://github.com/qgedzr297/djy/blob/master/gb/tag/%E6%B2%88%E4%B8%80%E9%B8%A3.md">沈一鸣</a>上将等8位将士在<a href="https://github.com/qgedzr297/djy/blob/master/gb/tag/%E9%BB%91%E9%B9%B0.md">黑鹰</a>事故中殉职，<a href="https://github.com/qgedzr297/djy/blob/master/gb/tag/%E7%A7%BB%E6%9F%A9.md">移柩</a>车队今天下午5时许在宪兵前导下从三总出发，大批民众医护拿着国旗向殉职将士致敬，台湾总统<a href="https://github.com/qgedzr297/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md">蔡英文</a>在国防部门口亲自迎接车队，悼念缅怀。</p>
+<p>【大纪元2020年01月13日讯】<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E5%8F%82%E8%B0%8B%E6%80%BB%E9%95%BF.md#1">参谋总长</a><ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E6%B2%88%E4%B8%80%E9%B8%A3.md#1">沈一鸣</a>上将等8位将士在<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E9%BB%91%E9%B9%B0.md#1">黑鹰</a>事故中殉职，<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E7%A7%BB%E6%9F%A9.md#1">移柩</a>车队今天下午5时许在宪兵前导下从三总出发，大批民众医护拿着国旗向殉职将士致敬，台湾总统<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>在国防部门口亲自迎接车队，悼念缅怀。</p>
 <p>据中央社报导，蔡总统在国防部长严德发、国家安全会议秘书长李大维陪同，带领国防部全体官兵同仁向殉职将士告别，在司仪致词“任务已经结束了，谢谢你们，我们保证会克尽军人职责，竭尽忠诚，坚守岗位，愿你们一路好走”下，哀悼追思，场面肃穆。</p>
-<p>国防部为表彰追思<a href="https://github.com/qgedzr297/djy/blob/master/gb/tag/%E6%B2%88%E4%B8%80%E9%B8%A3.md">沈一鸣</a>等8位殉职将士，今天下午以高规格<a href="https://github.com/qgedzr297/djy/blob/master/gb/tag/%E7%A7%BB%E6%9F%A9.md">移柩</a>，路线从三军总医院怀德厅启程，最后抵达空军松指部。</p>
+<p>国防部为表彰追思<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E6%B2%88%E4%B8%80%E9%B8%A3.md#1">沈一鸣</a>等8位殉职将士，今天下午以高规格<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E7%A7%BB%E6%9F%A9.md#1">移柩</a>，路线从三军总医院怀德厅启程，最后抵达空军松指部。</p>
 <p>移柩车队沿途行经国防部等19处地点，路线全长约13公里，采“慢速引导”并规划37个致敬点，供官兵代表及民众致意。</p>
 <p>松山基地指挥部明天将举行公祭，除了棺木覆旗、追晋军阶、颁发褒扬令与旌忠状外，将有4架幻象2000战机冲场，以“缺席队形”编队，悼念殉职人员。</p>
-<p><center><a width="600" b="338" src=""></a><a href="https://git.io/JvJO4"><img width="600" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/6a89f6aAW1o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></center></p>
+<p><center><a width="600" b="338" src=""></a><a href="https://git.io/JTxVg"><img width="600" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/6a89f6aAW1o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></center></p>
 <p>责任编辑：陈安</p>
 
 <hr>
-
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/13/n11790627.htm">黑鹰殉职将士移柩 沿途民众致敬 蔡英文亲悼</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767748.htm">哀悼黑鹰事故殉职将士　林右昌向英灵致意</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767590.htm">黑鹰失事 运安会：排除大部分机械或天气因素</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767453.htm">台北宾馆悼黑鹰 机工长稚子留言：爸爸我爱您</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11766838.htm">黑鹰直升机失事8将士殉职 1月14日公祭</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766042.htm">黑鹰坠机事件 台湾多个友邦致哀慰问</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11765971.htm">悼念黑鹰亡者 朱立伦韩国瑜先后到灵堂致意</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788275.htm">114个“耳光”搧向国台办 李敖儿子微博被封</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788008.htm">蔡英文高票当选 网络调侃央视主播“贡献”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788541.htm">中共官员变换护照身份 逃避人权法案制裁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788435.htm">姆钦：北京若再与伊朗交易 美制裁绝不松手</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745420.htm">北京北新桥锁龙井里真有龙吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776359.htm">简化汉字“圣”包藏什么祸心？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11765864.htm">?美国四位总统的神异经历</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772993.htm">【历史回眸】惊世灾难是怎样被中共抹去的</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11786063.htm">【拍案惊奇】蔡英文连任！北京的三层误判</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11783658.htm">【更新】蔡英文破817万票 民进党立委过半</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772884.htm">【直播回放】蔡英文高票连任 名家点评胜选关键</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11787883.htm">【十字路口】横扫817万票 蔡英文为何创纪录</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735787.htm">【罗厨寻味】年菜系列之二：砂锅滋补石斑鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11783661.htm">【拍案惊奇】台湾大选 分享5个忠告</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11783413.htm">黄秋生下周舌战何君尧 杜汶泽幽默分享经验</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782930.htm">黄渤饰教练引争议 《中国女排》或无缘新年档</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788333.htm">杜汶泽请求蔡英文：救助流亡到台湾的香港人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/11/n11784585.htm">2010至2019年全球美女Top30榜 子瑜获第5名</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782420.htm">台湾总统大选在即 网红、艺人吁：要去投票</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790627.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/3/n11765971.md#1">悼念黑鹰亡者 朱立伦韩国瑜先后到灵堂致意</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/3/n11766042.md#1">黑鹰坠机事件 台湾多个友邦致哀慰问</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/4/n11766838.md#1">黑鹰直升机失事8将士殉职 1月14日公祭</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/4/n11767453.md#1">台北宾馆悼黑鹰 机工长稚子留言：爸爸我爱您</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/4/n11767590.md#1">黑鹰失事 运安会：排除大部分机械或天气因素</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/4/n11767748.md#1">哀悼黑鹰事故殉职将士　林右昌向英灵致意</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527567.md#1">寺庙沦私产恐遭继承 台内政部：转宗教团体名下</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527562.md#1">中共办“马习会”研讨 台陆委会：统战本质</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527564.md#1">观光局升格观光署 台交长：拟设分署落实政策</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527483.md#1">用别人的钱买自己股票套现 台兴泰前董座遭起诉</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11290434.md#1" target="_blank">【征文】爱德华：金门战役共军惨败之迷</a></li><li><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">【新闻看点】决战日川普胜算？连任料有大动作</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525168.md#1">【珍言真语】记者忆采访被刺：报真相不退缩</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1">【思想领袖】纳瓦罗：美媒成中共“有用白痴”</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520354.md#1">【图解】2020美国大选 投票结果何时出</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520247.md#1">华为副总裁深圳猝死 曾在伦敦当记者</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">【新闻看点】决战日川普胜算？连任料有大动作</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520465.md#1">登台献唱被拍成五五身 李荣浩：这还算个人吗</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522915.md#1">夫妻俩持不同政见 黄秋生有一套相处之道</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520656.md#1">邓超上火获9岁儿支招 网友：父子似互换角色</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520245.md#1">罹癌后存活50年  台大医师：爬山是一帖良药</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515130.md#1">这些蔬果有苦味别吃 可致中毒！误食3步处理</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524129.md#1">被寄养小狗花半个月走100公里回家找主人</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520485.md#1">足底筋膜炎4招改善！症状、治疗和复健全图解</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521919.md#1">传川普同意出售F-22战机给以色列</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/13/n11790627.htm">黑鹰殉职将士移柩 沿途民众致敬 蔡英文亲悼</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xcbfpq327/djy/blob/master/gb/20/1/13/n11790627.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
